--- a/discussion.tex
+++ b/discussion.tex
@@ -1,5 +1,7 @@
 \section{Discussion}\label{s:discussion}
 
+\paragrapha{Composability} Bundles are naturally \emph{composable}: a subdomain of domain A could deploy its own \name to take control of its fraction of the in-network queues. 
+
 \paragrapha{Multipath}
 \an{move this inline to eval?}
 An interesting scenario is load-balancing in the core, a widely used technique for reducing the congestion on any one path.
